--- a/themes/backendbrasil/layout/index.hbs
+++ b/themes/backendbrasil/layout/index.hbs
@@ -108,7 +108,7 @@
       </p>
 
       <div>
-        <a href="http://www.url.com" class="button">{{__ 'events.confirm'}}</a>
+        <a href="{{link}}" target="_blank" class="button">{{__ 'events.confirm'}}</a>
       </div>
     </article>
   {{/each}}
