--- a/themes/backendbrasil/layout/partials/footer.hbs
+++ b/themes/backendbrasil/layout/partials/footer.hbs
@@ -10,7 +10,7 @@
   </article>
 
   <article class="tile is-flex-half is-flex-full-mobile">
-    <div class="field is-grouped">
+    <form class="field is-grouped">
       <p class="control no-grow no-shrink is-expanded">
         <input class="input" type="text" placeholder="{{__ 'email_placeholder'}}">
       </p>
@@ -31,7 +31,7 @@
           {{__ 'sign'}}
         </a>
       </p>
-    </div>
+    </form>
   </article>
 </section>
 
