add links for footer and menu

--- a/themes/backendbrasil/layout/partials/menu.hbs
+++ b/themes/backendbrasil/layout/partials/menu.hbs
@@ -1,9 +1,5 @@
 <nav class="navbar be--navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <!--
-      <a class="navbar-item be--navbar-item--logo has-text-weight-bold is-size-5" href="#">backend &lt;brasil&gt;</a>
-    !-->
-
     <a class="navbar-item be--navbar-item--logo" href="#">
       {{> svg '#white-logo'}}
     </a>
@@ -17,10 +13,10 @@
 
   <div class="navbar-menu" id="mainMenu">
     <div class="navbar-end">
-      <a href="http://www.url.com" class="navbar-item has-text-weight-semibold is-uppercase">{{__ 'menu.about'}}</a>
-      <a href="http://www.url.com" class="navbar-item has-text-weight-semibold is-uppercase">{{__ 'menu.jobs'}}</a>
-      <a href="http://www.url.com" class="navbar-item has-text-weight-semibold is-uppercase">{{__ 'menu.blog'}}</a>
-      <a href="http://www.url.com" class="navbar-item has-text-weight-semibold be--navbar-item--join">
+      <a href="/quem-somos" class="navbar-item has-text-weight-semibold is-uppercase">{{__ 'menu.about'}}</a>
+      <a href="/vagas" class="navbar-item has-text-weight-semibold is-uppercase">{{__ 'menu.jobs'}}</a>
+      <a href="/blog" class="navbar-item has-text-weight-semibold is-uppercase">{{__ 'menu.blog'}}</a>
+      <a href="http://github.com/{{config.github}}" target="_blank" class="navbar-item has-text-weight-semibold be--navbar-item--join">
         <span class="icon"><i class="fab fa-github fa-lg"></i></span>
         {{__ 'menu.join'}}
       </a>
