start quem-somos page

--- a/themes/backendbrasil/layout/index.hbs
+++ b/themes/backendbrasil/layout/index.hbs
@@ -116,7 +116,7 @@
 
 <section class="posts tile-is-flexible tile is-ancestor">
   <article class="tile is-flex-full">
-    <h2 class="title">{{_p 'blog.latest'}}</h2>
+    <h2 class="title">{{_p 'home.follow_blog'}}</h2>
   </article>
 
   <section class="tile tile-is-flexible is-flex-full">
@@ -160,7 +160,7 @@
 <section class="partners tile tile-is-flexible is-ancestor">
   <section class="tile tile-is-flexible is-flex-half is-flex-full-mobile">
     <article class="tile is-child is-flex-full">
-      <h2 class="title">{{_p 'sponsors'}}</h2>
+      <h2 class="title">{{_p 'home.sponsors'}}</h2>
     </article>
 
     {{#each site.data.partners_sponsors.sponsors}}
@@ -174,7 +174,7 @@
 
   <section class="tile tile-is-flexible is-flex-half is-flex-full-mobile">
     <article class="tile is-child is-flex-full">
-      <h2 class="title">{{_p 'partners'}}</h2>
+      <h2 class="title">{{_p 'home.partners'}}</h2>
     </article>
 
     {{#each site.data.partners_sponsors.partners}}
