add about page's header

--- a/themes/backendbrasil/layout/quem-somos.hbs
+++ b/themes/backendbrasil/layout/quem-somos.hbs
@@ -1,5 +1,5 @@
-<section class="about--header">
-  <article>
+<section class="about--header tile tile-is-flexible">
+  <article class="tile is-child is-flex-two-thirds no-grow no-shrink">
     <h4 class="is-size-4">{{{__ 'about.header.title'}}}</h4>
     <p>{{__ 'about.header.text'}}</p>
   </article>
