--- a/themes/backendbrasil/assets/main.scss
+++ b/themes/backendbrasil/assets/main.scss
@@ -9,4 +9,5 @@ $family-sans-serif: "Open Sans", BlinkMacSystemFont, -apple-system, "Segoe UI", 
 @import 'styles/buttons.scss';
 @import 'styles/menu.scss';
 @import 'styles/home.scss';
+@import 'styles/about.scss';
 @import 'styles/footer.scss';
