--- a/themes/backendbrasil/layout/quem-somos.hbs
+++ b/themes/backendbrasil/layout/quem-somos.hbs
@@ -1,6 +1,27 @@
-<section class="about--header tile tile-is-flexible">
+<section class="about--header tile is-ancestor tile-is-flexible">
   <article class="tile is-child is-flex-two-thirds no-grow no-shrink">
     <h4 class="is-size-4">{{{__ 'about.header.title'}}}</h4>
     <p>{{__ 'about.header.text'}}</p>
+  </article>
+</section>
+
+<section class="about--believe tile is-ancestor tile-is-flexible">
+  <article class="tile is-child is-flex-full no-grow no-shrink">
+    <h2 class="title">{{__ 'about.we_believe.title'}}</h2>
+  </article>
+
+  <article class="tile is-child is-flex-one-third is-flex-full-mobile no-grow no-shrink">
+    <h5 class="is-size-5">{{__ 'about.we_believe.respect.title'}}</h5>
+    <p>{{__ 'about.we_believe.respect.text'}}</p>
+  </article>
+
+  <article class="tile is-child is-flex-one-third is-flex-full-mobile no-grow no-shrink">
+    <h5 class="is-size-5">{{__ 'about.we_believe.inclusion.title'}}</h5>
+    <p>{{__ 'about.we_believe.inclusion.text'}}</p>
+  </article>
+
+  <article class="tile is-child is-flex-one-third is-flex-full-mobile no-grow no-shrink">
+    <h5 class="is-size-5">{{__ 'about.we_believe.partnership.title'}}</h5>
+    <p>{{__ 'about.we_believe.partnership.text'}}</p>
   </article>
 </section>
