add categories section to blog page

--- a/themes/backendbrasil/assets/main.scss
+++ b/themes/backendbrasil/assets/main.scss
@@ -10,4 +10,5 @@ $family-sans-serif: "Open Sans", BlinkMacSystemFont, -apple-system, "Segoe UI", 
 @import 'styles/menu.scss';
 @import 'styles/home.scss';
 @import 'styles/about.scss';
+@import 'styles/blog.scss';
 @import 'styles/footer.scss';
