--- a/themes/backendbrasil/layout/blog.hbs
+++ b/themes/backendbrasil/layout/blog.hbs
@@ -11,3 +11,46 @@
     </ul>
   </article>
 </section>
+
+<section class="posts tile-is-flexible tile is-ancestor">
+  <article class="tile is-flex-full">
+    <h2 class="title">{{_p 'home.follow_blog'}}</h2>
+  </article>
+
+  <section class="tile tile-is-flexible is-flex-full">
+    {{#each site.posts.data}}
+      <article class="
+        tile is-flex-full-mobile no-grow no-shrink is-flex-one-third is-child has-text-left
+        {{#gt @index 2}}
+          is-hidden
+        {{/gt}}
+      ">
+        <div class="posts--thumbnail">
+          <a href="{{path}}" title="{{title}}">
+            <img src="{{path}}/{{thumbnail}}" alt="{{thumbnail_alt}}"/>
+          </a>
+        </div>
+
+        <ul class="posts--categories">
+          {{#each categories.data}}
+            <li>
+              <a href="{{path}}" title="{{name}}">{{name}}</a>
+            </li>
+          {{/each}}
+        </ul>
+
+        <h4 class="posts--title has-text-weight-semibold is-size-5">
+          <a href="{{path}}" title="{{title}}">
+            {{title}}
+          </a>
+        </h4>
+
+        <p><a href="{{path}}" title="{{description}}">{{description}}</a></p>
+      </article>
+    {{/each}}
+
+    {{#eq site.posts.data.length 0}}
+      <span>{{__ 'blog.no_posts'}}</span>
+    {{/eq}}
+  </section>
+</section>
