--- a/themes/backendbrasil/layout/quem-somos.hbs
+++ b/themes/backendbrasil/layout/quem-somos.hbs
@@ -1,9 +1,11 @@
 <section class="about--header tile is-ancestor tile-is-flexible">
   <article class="tile is-child is-flex-two-thirds no-grow no-shrink">
-    <h4 class="is-size-4">{{{__ 'about.header.title'}}}</h4>
+    <h4>{{{__ 'about.header.title'}}}</h4>
     <p>{{__ 'about.header.text'}}</p>
   </article>
 </section>
+
+<section class="about-image-group"></section>
 
 <section class="about--believe tile is-ancestor tile-is-flexible">
   <article class="tile is-child is-flex-full no-grow no-shrink">
