--- a/themes/backendbrasil/assets/styles/about.scss
+++ b/themes/backendbrasil/assets/styles/about.scss
@@ -2,14 +2,28 @@
   align-content: center;
   align-items: center;
   justify-content: center;
-  background-color: darken($primary, 30%);
+  background-color: #fff;
   text-align: center;
   padding: 9rem 3rem 6rem;
-  color: #fff;
+  color: $text;
 
   strong { color: inherit; }
 
-  p { padding-top: 1rem; }
+  p { 
+    padding-top: 1rem;
+    font-size: 20px;
+  }
+
+  h4 {
+    font-size: 44px;
+    font-weight: 700;
+  }
+}
+
+.about-image-group {
+  background-image: url('../img/capivara.jpg');
+  width: 100%;
+  height: 400px;
 }
 
 .about--believe {
@@ -21,6 +35,12 @@
 
   > .is-flex-full {
     padding-bottom: 2rem;
+  }
+
+  h2 {
+    font-weight: 700;
+    color: $text;
+    text-transform: uppercase;
   }
 
   .is-flex-one-third {
