fix breadcrumb conditional

--- a/themes/backendbrasil/layout/partials/menu.hbs
+++ b/themes/backendbrasil/layout/partials/menu.hbs
@@ -5,31 +5,31 @@
     {{/eq}}
   " role="navigation" aria-label="main navigation">
 
-  {{#if page.id}}
-    <div class="navbar-brand">
-      <a class="navbar-item be--navbar-item--logo" href="#">
-        {{> svg '#white-logo'}}
-      </a>
+  <div class="navbar-brand">
+    <a class="navbar-item be--navbar-item--logo" href="/">
+      {{> svg '#white-logo'}}
+    </a>
 
-      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="mainMenu">
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-      </a>
+    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="mainMenu">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
+
+  {{#if page.id}}
+    <div class="
+        navbar--breadcrumb
+        {{#eq page.path "index.html"}}
+          is-hidden
+        {{/eq}}
+      ">
+      <span>
+        <strong>{{page.title}}</strong>
+        <i>{{getPageDescription page.id}}</i>
+      </span>
     </div>
   {{/if}}
-
-  <div class="
-      navbar--breadcrumb
-      {{#eq page.path "index.html"}}
-        is-hidden
-      {{/eq}}
-    ">
-    <span>
-      <strong>{{page.title}}</strong>
-      <i>{{getPageDescription page.id}}</i>
-    </span>
-  </div>
 
   <div class="navbar-menu" id="mainMenu">
     <div class="navbar-end">
