Adicionando imagens e fontes

--- a/themes/backendbrasil/layout/quem-somos.hbs
+++ b/themes/backendbrasil/layout/quem-somos.hbs
@@ -13,17 +13,37 @@
   </article>
 
   <article class="tile is-child is-flex-one-third is-flex-full-mobile no-grow no-shrink">
-    <h5 class="is-size-5">{{__ 'about.we_believe.respect.title'}}</h5>
+    <h5 class="is-size-2">{{__ 'about.we_believe.respect.title'}}</h5>
     <p>{{__ 'about.we_believe.respect.text'}}</p>
   </article>
 
   <article class="tile is-child is-flex-one-third is-flex-full-mobile no-grow no-shrink">
-    <h5 class="is-size-5">{{__ 'about.we_believe.inclusion.title'}}</h5>
+    <h5 class="is-size-2">{{__ 'about.we_believe.inclusion.title'}}</h5>
     <p>{{__ 'about.we_believe.inclusion.text'}}</p>
   </article>
 
   <article class="tile is-child is-flex-one-third is-flex-full-mobile no-grow no-shrink">
-    <h5 class="is-size-5">{{__ 'about.we_believe.partnership.title'}}</h5>
+    <h5 class="is-size-2">{{__ 'about.we_believe.partnership.title'}}</h5>
     <p>{{__ 'about.we_believe.partnership.text'}}</p>
+  </article>
+</section>
+
+<section class="things-us-do">
+  <div class="text">
+    <p>
+      Acima de tudo, é fundamental ressaltar que o início da atividade geral de formação de atitudes talvez venha a ressaltar a relatividade do investimento em reciclagem técnica.
+    </p>
+  </div>
+  <picture>
+    <img src="../img/evento.webp">
+  </picture>
+</section>
+
+
+<section class="about--team tile is-ancestor tile-is-flexible">
+  <article class="tile is-child is-flex-full no-grow no-shrink">
+    <h2 class="title">Nosso time</h2>
+
+    <p class="text-paragraph">Nosso time reune uma equipe de backenders, designers e simpatizantes da computação de peso.</p>
   </article>
 </section>
