--- a/themes/backendbrasil/assets/styles/about.scss
+++ b/themes/backendbrasil/assets/styles/about.scss
@@ -1,10 +1,11 @@
 .about--header {
+
   align-content: center;
   align-items: center;
   justify-content: center;
   background-color: #fff;
   text-align: center;
-  padding: 9rem 3rem 6rem;
+  padding: 15rem 3rem 10rem;
   color: $text;
 
   strong { color: inherit; }
@@ -18,12 +19,32 @@
     font-size: 44px;
     font-weight: 700;
   }
+
 }
 
 .about-image-group {
-  background-image: url('../img/capivara.jpg');
+  background-image: url('../img/meetup0.jpg');
   width: 100%;
   height: 400px;
+  background-position: 0px -435px;
+  background-size: 100%;
+}
+
+.about--team {
+
+  justify-content: space-between;
+  @extend %has-default-padding;
+  @extend %inter-section-margin;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+
+  p { font-size: 1.3333rem; }
+
+  h2 {
+    font-weight: 700;
+    color: $text;
+    text-transform: uppercase;
+  }
 }
 
 .about--believe {
@@ -46,6 +67,8 @@
   .is-flex-one-third {
     @extend %basic-shadow;
     padding: 1rem;
+    box-shadow: none;
+    border: solid 2px #ebebeb;
 
     h5 {
       font-weight: bold;
@@ -53,6 +76,36 @@
       padding-bottom: 1rem;
     }
 
-    p { font-size: 0.90rem; }
+    p { font-size: 1.3333rem; }
   }
+}
+
+.things-us-do {
+  border: solid 2px #ebebeb;
+  width: 100%;
+  height: 29rem;
+  margin-bottom: 10rem;
+
+  div {
+
+    p {    
+      width: 60%;
+      float: left;
+      padding: 1.5rem;
+      font-size: 1.2rem;
+    }
+
+  }
+
+  picture {
+    width: 40%;
+    float: left;
+
+    img {
+      width: 100%;
+      height: 28.5rem;
+      padding: 5px 5px 0px 0px;
+    }
+  }
+
 }
