add bgc to join menu button

--- a/themes/backendbrasil/assets/styles/menu.scss
+++ b/themes/backendbrasil/assets/styles/menu.scss
@@ -47,6 +47,7 @@
     }
 
     &--join {
+      background-color: #fff;
       color: $primary !important;
       border-radius: 3px;
       padding: 0.4rem 1.75rem 0.4rem calc(1.75rem + 0.75rem);
