--- a/themes/backendbrasil/assets/styles/menu.scss
+++ b/themes/backendbrasil/assets/styles/menu.scss
@@ -1,6 +1,7 @@
 .be--navbar {
   @extend %has-default-padding;
   background-color: transparent;
+  position: absolute;
   padding-top: 0;
   padding-bottom: 0;
   width: 100%;
