--- a/themes/backendbrasil/layout/layout.hbs
+++ b/themes/backendbrasil/layout/layout.hbs
@@ -3,7 +3,7 @@
   <head>
     {{> head}}
   </head>
-  <body>
+  <body class="body--{{slugify page.id}}">
     {{> icons}}
     {{> menu}}
     {{{body}}}
