--- a/themes/backendbrasil/layout/quem-somos.hbs
+++ b/themes/backendbrasil/layout/quem-somos.hbs
@@ -28,14 +28,14 @@
 
 <section class="things-we-do tile is-ancestor tile-is-flexible">
   <article class="
-    tile is-child is-flex-half is-flex-full-mobile
+    tile is-child is-flex-half-desktop is-flex-full
     no-shrink no-grow
   ">
     <p>{{__ 'about.things_we_do'}}</p>
   </article>
 
   <article class="
-    tile is-child is-flex-half is-flex-full-mobile
+    tile is-child is-flex-half-desktop is-flex-full
     no-shrink no-grow
   ">
     <div>
