--- a/themes/backendbrasil/assets/main.scss
+++ b/themes/backendbrasil/assets/main.scss
@@ -12,4 +12,6 @@ $family-sans-serif: "Open Sans", BlinkMacSystemFont, -apple-system, "Segoe UI", 
 @import 'styles/home.scss';
 @import 'styles/about.scss';
 @import 'styles/blog.scss';
+@import 'styles/article.scss';
+@import 'styles/jobs.scss';
 @import 'styles/footer.scss';
