--- a/themes/backendbrasil/layout/vagas.hbs
+++ b/themes/backendbrasil/layout/vagas.hbs
@@ -1,6 +1,9 @@
 <section class="jobs--header tile is-ancestor tile-is-flexible">
   <article class="tile is-child is-flex-two-thirds no-grow no-shrink">
     <h4 class="is-size-4 has-text-weight-bold">{{{__ 'jobs.header.title'}}}</h4>
-    <p>{{__ 'jobs.header.text'}}</p>
   </article>
+</section>
+
+<section class="">
+  
 </section>
